--- a/Incidence_berlin/config.yaml
+++ b/Incidence_berlin/config.yaml
@@ -22,7 +22,7 @@ max_days_span: 21
 # 9. Mutant base frequency cutoff - as count
 freq_cutoff: 2
 # 10. Sample name for plot grouping, e.g. country or data set name
-group: "country"
+group: "Berlin"
 # 11. Calculate R0! y/n
 R0: y
 # 12. Use a masking file (VCF)
